Fix white space and variable accidentally changed.

--- a/themes/finna2/less/global/variables.less
+++ b/themes/finna2/less/global/variables.less
@@ -389,7 +389,7 @@
 //
 //##
 @pagination-background:                @body-bg;
-@pagination-color:                     @action-link-color;
+@pagination-color:                     @link-color;
 @pagination-bg:                        @body-bg;
 @pagination-border:                    transparent;
 
